# R-Touhou

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Game.cpp  LICENSE.md  README.md  Serialization.cpp  build.bat  build.sh  client.html  ecs.html  entity.html  game.html  genindex.html  index.html  objects.inv  operator.cpp  package.bat  package.sh  registry.html  search.html  searchindex.js  server.html  sparsearray.html  system.html
.github/workflows/: compil.yml  doc.yml  mirror.yml  release.yml
Abstract/: ANetwork.hpp
CPM_modules/: Findasio.cmake
Client/: Client.cmake  ClientSrc.cmake  main.cpp
Client/include/: Client.hpp  ClientGame.hpp
Client/src/: ActionFunction.cpp  Client.cpp  ClientGame.cpp  Game.cpp  ParseMessage.cpp
Server/: RFC.md  Server.cmake  ServerSrc.cmake  main.cpp
Server/include/: Server.hpp  ServerGame.hpp
Server/src/: Game.cpp  Server.cpp  ServerGame.cpp
_sources/: client.rst.txt  index.rst.txt  sparsearray.rst.txt  system.rst.txt
app/Client/: Client.cmake  ClientSrc.cmake  main.cpp
app/Instance/: Instance.cmake  InstanceSrc.cmake  src.txt
app/Server/: RFC.md  Server.cmake  ServerSrc.cmake  main.cpp
app/ServerManager/: ServerManager.cmake  src.txt
app/ServerTester/: Game.cpp  test.cpp
cmake/: fetchASIO.cmake  fetchSFML.cmake
docs/: CNAME  ECS.md  RFC.md
docs/ecs/: COMPONENTS.md  MACROS.md  SYSTEMS.md
docs/guides/: COMPONENTS.md
docs/source/: RFC.rst  client.rst  conf.py  ecs.rst  entity.rst  index.rst  registry.rst  server.rst
ecs/: Entity.hpp  Game.hpp  Init.hpp  Registry.hpp  SparseArray.hpp  Systems.hpp  ecs.cmake
ecs/Components/: Color.hpp  Components.hpp  Controllable.hpp  Drawable.hpp  Hitbox.hpp  Outline.Hpp  Outline.hpp  Path.hpp  Position.hpp  Position2Base.hpp  Projectile.hpp  RectBase.hpp  Size.hpp  Sound.hpp  Sprite.hpp  SpriteTextureAnimation.hpp  SpriteTextureRect.hpp  Text.hpp  Velocity.hpp  Window.hpp
ecs/Events/: GenericEventBase.hpp
ecs/Macros/: ForEach.hpp  Systems.hpp
ecs/Systems/: Draw.hpp  Sprite.hpp
ecs/documentation/: components.html  macros.html  systems.html
ecs/guides/: components.html  systems.html
ecs/include/: Registry.hpp  Systems.hpp
ecs/src/: Main.cpp
engine/ClientManager/: ClientManager.cmake  R-Touhou-Client-Manager  src.txt
engine/Game/: GameSrc.cmake  src.txt
engine/GameManager/: GameManagerSrc.cmake  src.txt
engine/Graphic/: GraphicSrc.cmake  src.txt
include/: AGame.hpp  ANetwork.hpp  INetwork.hpp  Serialization.hpp  operator.hpp
tests/: Unit_tests.cpp
(+1131 files in other folders)
